# budget

./: .gitignore  CLAUDE.md  Cargo.toml  IOS_CI_CD.md  IOS_IMPLEMENTATION_PLAN.md  IOS_LINTER_CONFIG.md  SPEC.md  TODO.md  biome.json  bun.nix  flake.nix  package.json  playwright.config.js  todo.md
.claude/: settings.json
.claude/hooks/: biome-fmt.sh  biome-lint.sh  bun-test.sh  kotlin-fmt.sh  kotlin-lint.sh  rust-fmt.sh  rust-test.sh
.github/hooks/: pre-commit
.github/workflows/: android.yml  bun2nix.yml  ci.yml  ios.yml
crates/amazon/: Cargo.toml
crates/amazon/src/: client.rs  cookies.rs  error.rs  lib.rs  matching.rs  parser.rs  types.rs
crates/amazon/tests/fixtures/: invoice.html  next_data.html
crates/api/: Cargo.toml  build.rs
crates/api/src/: auth.rs  lib.rs  main.rs  openapi.rs  state.rs
crates/api/src/routes/: accounts.rs  amazon.rs  budgets.rs  categories.rs  connections.rs  import.rs  jobs.rs  mod.rs  paypal.rs  projects.rs  rules.rs  transactions.rs
crates/api/tests/: integration.rs
crates/core/: Cargo.toml
crates/core/src/: anomalies.rs  budget.rs  db.rs  error.rs  lib.rs  projection.rs  rules.rs  seasonality.rs
crates/core/src/models/: domain.rs  enums.rs  id.rs  mod.rs  newtypes.rs
crates/db/: Cargo.toml
crates/db/src/: accounts.rs  amazon.rs  balances.rs  categories.rs  connections.rs  enrichment.rs  error.rs  lib.rs  paypal.rs  rules.rs  transactions.rs
crates/jobs/: Cargo.toml
crates/jobs/src/: categorize.rs  correlate.rs  enrich.rs  lib.rs  paypal.rs  pipeline.rs  queries.rs  recompute.rs  schedule_queries.rs  scheduler.rs  storage.rs  sync.rs
crates/jobs/tests/: integration.rs  scheduler_test.rs
crates/paypal/: Cargo.toml
crates/paypal/src/: client.rs  error.rs  lib.rs  live_tests.rs  matching.rs  types.rs
crates/providers/: Cargo.toml
crates/providers/src/: amex_csv.rs  bank.rs  error.rs  gemini.rs  lib.rs  llm.rs
crates/providers/src/enable_banking/: auth.rs  client.rs  live_tests.rs  mod.rs  provider.rs  tests.rs  types.rs
crates/providers/src/enable_banking/test_fixtures/: test_key.pem
crates/providers/src/mock/: bank.rs  llm.rs  mod.rs
e2e/: auth.setup.js  dashboard.spec.js  global-setup.js  global-teardown.js  smoke.spec.js
frontend/: app.js  gen-oat-reference.py  helpers.js  helpers.test.js  index.html  oat-reference.md  style.css
frontend/components/: budgets.js  projects.js
ios/: .gitignore  README.md
migrations/: 00001_init.sql  00002_domain.sql  00003_provider_transaction_id.sql  00004_connections.sql  00005_suggested_category.sql  00006_category_method.sql  20260101000000_init.sql  20260226000000_schedule_runs.sql  20260226100000_collapse_budget_into_categories.sql  20260226200000_account_nickname.sql  20260226300000_unique_category_name.sql  20260226400000_transaction_extra_fields.sql  20260227000000_rule_conditions.sql  20260227100000_drop_budget_months.sql  20260227200000_correlation_fixes.sql  20260227300000_llm_justification.sql  20260227400000_text_to_uuid.sql  20260301000000_typed_transaction_fields.sql  20260302000000_budget_type.sql  20260303000000_strip_colon_category_names.sql  20260314000000_amazon_enrichment.sql  20260315000000_amazon_accounts.sql  20260315100000_balance_snapshots.sql  20260316000000_unified_schedule.sql  20260317000000_drop_amazon_match_confidence.sql  20260318000000_llm_title.sql  20260319000000_paypal_enrichment.sql
mobile/: .editorconfig  .gitignore  build.gradle.kts  detekt.yml  gradle.properties  settings.gradle.kts
mobile/androidApp/: build.gradle.kts
mobile/androidApp/src/main/: AndroidManifest.xml
mobile/androidApp/src/main/kotlin/com/budget/app/: CashFlowComponents.kt  CategoriesScreen.kt  CategoryEditScreen.kt  DashboardScreen.kt  Formatting.kt  LedgerSection.kt  MainActivity.kt  MainScreen.kt  ProjectDrillDown.kt  SetupScreen.kt  TransactionDetailScreen.kt  TransactionRow.kt  TransactionsScreen.kt
mobile/androidApp/src/main/res/drawable/: ic_launcher_foreground.xml
mobile/app/: build.gradle.kts
mobile/app/src/main/kotlin/com/budget/app/: MainActivity.kt
mobile/gradle/: libs.versions.toml
mobile/iosApp/iosApp/: BudgetApp.swift  ContentView.swift
mobile/shared/: build.gradle.kts
mobile/shared/src/androidMain/kotlin/com/budget/shared/: Platform.android.kt
mobile/shared/src/androidMain/kotlin/com/budget/shared/config/: AndroidConfigStore.kt
mobile/shared/src/commonMain/kotlin/com/budget/shared/: Greeting.kt  Platform.kt
mobile/shared/src/commonMain/kotlin/com/budget/shared/api/: BudgetApi.kt  CategoryName.kt  ConnectionTester.kt  DashboardModels.kt  TransactionModels.kt
mobile/shared/src/commonMain/kotlin/com/budget/shared/config/: ConfigStore.kt  ServerConfig.kt
mobile/shared/src/commonMain/kotlin/com/budget/shared/repository/: BudgetRepository.kt  DefaultBudgetRepository.kt
mobile/shared/src/commonMain/kotlin/com/budget/shared/viewmodel/: CategoriesViewModel.kt  CategoryEditViewModel.kt  DashboardViewModel.kt  SetupViewModel.kt  TransactionsViewModel.kt
mobile/shared/src/commonTest/kotlin/com/budget/shared/api/: CategoryNameTest.kt
mobile/shared/src/commonTest/kotlin/com/budget/shared/viewmodel/: CategoriesViewModelTest.kt  CategoryEditViewModelTest.kt  DashboardViewModelTest.kt  SetupViewModelTest.kt  TransactionsViewModelTest.kt
mobile/shared/src/iosMain/kotlin/com/budget/shared/: Platform.ios.kt
scripts/: 20260304_leaf_only_transactions.sql  api  api-coverage.ts  ing-balance-import.ts  ing-csv-import.ts  ing-pdf-to-csv.ts  setup-sandbox.sh  test-db
