[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
apalis = "1.0.0-rc.4"
apalis-sqlite = { version = "1.0.0-rc.4", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
confy = "2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
rust_decimal = { version = "1", features = ["serde-str"] }
rust_decimal_macros = "1"
thiserror = "2"
trait-variant = "0.1"
jsonwebtoken = "9"

# Internal crates
budget-core = { path = "crates/core" }
budget-jobs = { path = "crates/jobs" }
budget-providers = { path = "crates/providers" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
