[workspace]
members = ["crates/*"]
default-members = ["crates/api"]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.metadata.crane]
name = "budget"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "chrono", "rust_decimal", "uuid"] }
apalis = "1.0.0-rc.4"
apalis-postgres = { version = "1.0.0-rc.4", features = ["tokio"] }
apalis-workflow = "0.1.0-rc.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
confy = "2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["json", "query"] }
uuid = { version = "1", features = ["v4", "serde"] }
rust_decimal = { version = "1", features = ["serde-str"] }
csv = "1"
regex = "1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
rust_decimal_macros = "1"
subtle = "2"
thiserror = "2"
trait-variant = "0.1"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }

# Internal crates
budget-amazon = { path = "crates/amazon" }
budget-core = { path = "crates/core" }
budget-db = { path = "crates/db" }
budget-jobs = { path = "crates/jobs" }
budget-providers = { path = "crates/providers" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
