[package]
name = "budget-amazon"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
scraper = "0.25"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
tempfile = "3"

[lints]
workspace = true
