[package]
name = "api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "budget"
path = "src/main.rs"

[dependencies]
budget-core = { workspace = true }
budget-jobs = { workspace = true }
budget-providers = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
httpdate = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
