[package]
name = "api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "budget"
path = "src/main.rs"

[dependencies]
budget-amazon = { workspace = true, features = ["openapi"] }
budget-core = { workspace = true, features = ["openapi"] }
budget-db = { workspace = true, features = ["openapi"] }
budget-jobs = { workspace = true, features = ["openapi"] }
budget-providers = { workspace = true, features = ["openapi"] }
tokio = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-scalar = { workspace = true }

[dev-dependencies]
sqlx = { workspace = true }
tower = { workspace = true }

[lints]
workspace = true
