[package]
name = "budget-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
confy = { workspace = true }
regex = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
rust_decimal_macros = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
