[package]
name = "budget-db"
version = "0.1.0"
edition = "2024"

[dependencies]
budget-amazon = { workspace = true }
budget-core = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
rust_decimal_macros = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
