[package]
name = "budget-db"
version = "0.1.0"
edition = "2024"

[features]
openapi = ["dep:utoipa"]

[dependencies]
budget-amazon = { workspace = true }
budget-core = { workspace = true, features = ["sqlx"] }
chrono = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
utoipa = { workspace = true, optional = true }
uuid = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
rust_decimal_macros = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
