[package]
name = "budget-jobs"
version = "0.1.0"
edition = "2024"

[features]
openapi = ["dep:utoipa"]

[dependencies]
apalis = { workspace = true }
apalis-postgres = { workspace = true }
apalis-workflow = { workspace = true }
budget-amazon = { workspace = true }
budget-core = { workspace = true }
budget-db = { workspace = true }
budget-providers = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true, optional = true }
uuid = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
rust_decimal_macros = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
