[package]
name = "budget-paypal"
version = "0.1.0"
edition = "2024"

[features]
openapi = ["dep:utoipa"]

[dependencies]
chrono = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true, optional = true }
uuid = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
