[package]
name = "budget-providers"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
trait-variant = { workspace = true }

[dev-dependencies]
budget-core = { workspace = true }
tokio = { workspace = true }
wiremock = "0.6"

[lints]
workspace = true
