[package]
name = "budget-providers"
version = "0.1.0"
edition = "2024"

[features]
openapi = ["dep:utoipa"]

[dependencies]
budget-core = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
jsonwebtoken = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
trait-variant = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"

[lints]
workspace = true
